DECRQCRA checksum
With latest vttest [https://gitlab.gnome.org/chpe/vttest] the DECRQCRA test fails (choose 11, 3, 7, 3, 10 to get there).
xterm-334 changes the checksum algorithm:
modify checksum computation for DECRQCRA to treat uninitialized cells as blanks rather than nulls.
Need to decide whether to follow this.