parser: Improve documentation of XTERM_CHECKSUM_MODE

https://gitlab.gnome.org/GNOME/vte/issues/24